k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff-orchestrator-svc
  namespace: sistal
  labels:
    app: bff-orchestrator
spec:
  type: ClusterIP
  selector:
    app: bff-orchestrator
  ports:
  - port: 80        # Puerto del servicio (interno del clúster)
    targetPort: 8080 # Puerto del contenedor Go
    protocol: TCP
