k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: sistal
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - api-sistal-dev.sistal.cl
    secretName: api-tls-cert # cert-manager creará este secret
  rules:
  - host: api-sistal-dev.sistal.cl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bff-orchestrator-svc # Apunta al Service definido arriba
            port:
              number: 80
